6964714: NetworkInterface getInetAddresses enumerates IPv6 addresses if java.net.preferIPvStack property set

User can disable ipv6 explicitly, have to check it

Reviewed-by: chegar, alanb